[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okx-quant-mvp"
version = "0.1.0"
description = "A safe starting point for an OKX spot trading bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.scripts]
okx-quant = "okx_quant.main:main"

[tool.setuptools.packages.find]
include = ["okx_quant*"]
